src/components/StartPage/Convincer/styles.scss
.convincer-container {
  display: flex;
  flex-direction: column;
  position: relative;
  align-items: center;
  justify-content: center;
  width: 100%;
  @include media-breakpoint-up(lg){
    flex-direction: row;
  }
  // @include media-breakpoint-up(xl){
  //   flex-direction: row;
  // }
  .convincer-box{
    margin: 5px;
    padding-left: 15px;
    padding-right: 15px;
  }
  .convincer-image-container{
    display: block;
    width: 100%;
    max-width: 40vh;
    height: auto; 
    margin: auto;
    padding-top: 10px;
    padding-bottom: 10px;
    .convincer-image { 
      width: 40vh;
      height: auto;
      border-radius: 50%;
    }
    
  }
  
.convincer-info{
  text-align: center;
  @include media-breakpoint-up(lg){
    max-width:40vw !important;
    }
  }
}

